// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StatsChart renders a snapshot for populated values 1`] = `
<svg
  aria-describedby="«r1»"
  aria-labelledby="«r0»"
  class="w-full h-28 mt-2"
  role="img"
  viewBox="0 0 184 120"
>
  <title
    id="«r0»"
  >
    Hash cracking progress overview
  </title>
  <desc
    id="«r1»"
  >
    Bar chart comparing 1,200,000 candidates against 420 seconds.
  </desc>
  <line
    stroke="var(--color-ubt-grey, #aea79f)"
    stroke-width="1.5"
    vector-effect="non-scaling-stroke"
    x1="40"
    x2="40"
    y1="20"
    y2="90"
  />
  <line
    stroke="var(--color-ubt-grey, #aea79f)"
    stroke-width="1.5"
    vector-effect="non-scaling-stroke"
    x1="40"
    x2="164"
    y1="90"
    y2="90"
  />
  <g
    aria-hidden="true"
    fill="var(--color-ubt-grey, #aea79f)"
    font-size="8"
  >
    <text
      text-anchor="end"
      x="36"
      y="96"
    >
      0
    </text>
    <text
      text-anchor="end"
      x="36"
      y="24"
    >
      1,200,000
    </text>
  </g>
  <text
    fill="var(--color-text, #f5f5f5)"
    font-size="9"
    text-anchor="middle"
    transform="rotate(-90 20 55)"
    x="20"
    y="55"
  >
    Value
  </text>
  <text
    fill="var(--color-text, #f5f5f5)"
    font-size="9"
    text-anchor="middle"
    x="102"
    y="108"
  >
    Metrics
  </text>
  <g>
    <rect
      fill="var(--game-color-success)"
      height="70"
      rx="4"
      style="transition: height var(--motion-medium, 300ms) ease-out, y var(--motion-medium, 300ms) ease-out;"
      width="36"
      x="50"
      y="20"
    >
      <title>
        Candidates processed: 1,200,000 candidates
      </title>
    </rect>
    <text
      fill="var(--color-text, #f5f5f5)"
      font-size="8.5"
      text-anchor="middle"
      x="68"
      y="100"
    >
      Candidates
    </text>
  </g>
  <g>
    <rect
      fill="var(--game-color-secondary)"
      height="0.0245"
      rx="4"
      style="transition: height var(--motion-medium, 300ms) ease-out, y var(--motion-medium, 300ms) ease-out;"
      width="36"
      x="118"
      y="89.9755"
    >
      <title>
        Seconds elapsed: 420 seconds
      </title>
    </rect>
    <text
      fill="var(--color-text, #f5f5f5)"
      font-size="8.5"
      text-anchor="middle"
      x="136"
      y="100"
    >
      Seconds
    </text>
  </g>
</svg>
`;

exports[`StatsChart renders a snapshot when values are zero 1`] = `
<svg
  aria-describedby="«r3»"
  aria-labelledby="«r2»"
  class="w-full h-28 mt-2"
  role="img"
  viewBox="0 0 184 120"
>
  <title
    id="«r2»"
  >
    Hash cracking progress overview
  </title>
  <desc
    id="«r3»"
  >
    Bar chart comparing 0 candidates against 0 seconds.
  </desc>
  <line
    stroke="var(--color-ubt-grey, #aea79f)"
    stroke-width="1.5"
    vector-effect="non-scaling-stroke"
    x1="40"
    x2="40"
    y1="20"
    y2="90"
  />
  <line
    stroke="var(--color-ubt-grey, #aea79f)"
    stroke-width="1.5"
    vector-effect="non-scaling-stroke"
    x1="40"
    x2="164"
    y1="90"
    y2="90"
  />
  <g
    aria-hidden="true"
    fill="var(--color-ubt-grey, #aea79f)"
    font-size="8"
  >
    <text
      text-anchor="end"
      x="36"
      y="96"
    >
      0
    </text>
    <text
      text-anchor="end"
      x="36"
      y="24"
    >
      1
    </text>
  </g>
  <text
    fill="var(--color-text, #f5f5f5)"
    font-size="9"
    text-anchor="middle"
    transform="rotate(-90 20 55)"
    x="20"
    y="55"
  >
    Value
  </text>
  <text
    fill="var(--color-text, #f5f5f5)"
    font-size="9"
    text-anchor="middle"
    x="102"
    y="108"
  >
    Metrics
  </text>
  <g>
    <rect
      fill="var(--game-color-success)"
      height="0"
      rx="4"
      style="transition: height var(--motion-medium, 300ms) ease-out, y var(--motion-medium, 300ms) ease-out;"
      width="36"
      x="50"
      y="90"
    >
      <title>
        Candidates processed: 0 candidates
      </title>
    </rect>
    <text
      fill="var(--color-text, #f5f5f5)"
      font-size="8.5"
      text-anchor="middle"
      x="68"
      y="100"
    >
      Candidates
    </text>
  </g>
  <g>
    <rect
      fill="var(--game-color-secondary)"
      height="0"
      rx="4"
      style="transition: height var(--motion-medium, 300ms) ease-out, y var(--motion-medium, 300ms) ease-out;"
      width="36"
      x="118"
      y="90"
    >
      <title>
        Seconds elapsed: 0 seconds
      </title>
    </rect>
    <text
      fill="var(--color-text, #f5f5f5)"
      font-size="8.5"
      text-anchor="middle"
      x="136"
      y="100"
    >
      Seconds
    </text>
  </g>
</svg>
`;
